--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,9 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  background: #060e1b;
+  overflow: hidden;
 }
 
-a {
-  color: #00B7FF;
+#canvas {
+  opacity: 0.5;
+  position: absolute;
 }
