--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,11 +18,13 @@
           integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" href="/stylesheets/style.css">
     <script src="cesium/Cesium.js"></script>
+    <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
+    <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
     <style>
         @import url(cesium/Widgets/widgets.css);
 
         #galaxy {
-            height: 600px;
+            height: 700px;
         }
     </style>
 </head>
