--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -70,7 +70,7 @@
                             </span>
                     </div>
                     <div>
-                        <div class="checkbox disabled">
+                        <div class="checkbox">
                             <label class="checkbox-inline">
                                 <input id="check-show-grids" type="checkbox" checked data-toggle="toggle"> Grids
                             </label>
