a lot of new feature
Change-Id: Ia861ed86c26b9dc6a95c141b8299812fa0e8ebb2

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -178,6 +178,10 @@
                         </label>
                         <select id="player-grids-list"></select>
                     </div>
+
+                    <div>
+                        <button class="btn btn-info" id="player-location">My position</button>
+                    </div>
                 </div>
             </div>
             <div class="panel panel-default panel-transparent">
