--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -20,3 +20,12 @@ body {
 .panel-transparent .panel-body{
   background: rgba(46, 51, 56, 0.2)!important;
 }
+
+.avatar-upload {
+  width: 100%;
+  height: 200px;
+}
+
+.avatar-upload img {
+  max-width: 100%;
+}
