--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -276,8 +276,8 @@
 <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-fileinput/4.4.5/js/fileinput.min.js"></script> -->
 <!-- <script src="/bower/bootstrap-fileinput/js/fileinput.js"></script> -->
 <script src="/javascripts/avatar.js"></script>
-<script src="/cesium/Cesium.js"></script>
-<!-- <script src="//cdnjs.cloudflare.com/ajax/libs/webpack-cesium/1.37.0/webpack.cesium.js"></script> -->
+<!-- <script src="/cesium/Cesium.js"></script> -->
+<script src="//cdnjs.cloudflare.com/ajax/libs/webpack-cesium/1.37.0/webpack.cesium.js"></script>
 <script src="javascripts/index.js"></script>
 <script src="javascripts/Earth.js"></script>
 <script src="javascripts/contract.js"></script>
