update reveal avatar
Change-Id: I27caa2dd5d50e96f3ac13682d7e3dd6e069fc10e

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -107,8 +107,8 @@
 
                 </div>
                 <div class="panel-body">
-                    <div class="avatar-upload">
-                		<img src="placekitten.jpg">
+                    <div id="player-avatar" class="avatar-upload">
+                		<img >
                 	</div>
                     <div>
                         
