set and show avatar
Change-Id: I42dd5ec502766cf670a7fec09c3e3a95de68231f

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -162,34 +162,35 @@
                     </div>
                     <div class="row">
                         <div class="col-xs-6">
-                            <div>
-                                    <label>
-                                        {{t "longitude"}}
-                                    </label>
-                                    <span id="mouse-lon">
-
-                                    </span>
-                                </div>
+                            <img id="grid-lord-avatar">
                         </div>
-                         <div class="col-xs-6">
-                             <div>
-                                    <label>
-                                        {{t "latitude"}}
-                                    </label>
-                                    <span id="mouse-lat">
+                        <div class="col-xs-6">
+                            <div>
+                                <label>
+                                    {{t "longitude"}}
+                                </label>
+                                <span id="mouse-lon">
 
-                                    </span>
-                                </div>
-                        </div>                       
-                    </div>
-                    <div>
-                        <label>
-                            {{t "grid"}}
-                        </label>
-                        <span id="mouse-grid">
+                                </span>
+                            </div>
+                            <div>
+                                <label>
+                                    {{t "latitude"}}
+                                </label>
+                                <span id="mouse-lat">
+
+                                </span>
+                            </div>
+                            <label>
+                                {{t "grid"}}
+                            </label>
+                            <span id="mouse-grid">
 
                             </span>
+                        </div>
+                                             
                     </div>
+
                 </div>
             </div>
 
