--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -161,10 +161,10 @@
                     <div class="row">
                     </div>
                     <div class="row">
-                        <div class="col-xs-6">
+                        <div class="col-xs-5">
                             <img id="grid-lord-avatar">
                         </div>
-                        <div class="col-xs-6">
+                        <div class="col-xs-7">
                             <div>
                                 <label>
                                     {{t "longitude"}}
@@ -181,12 +181,22 @@
 
                                 </span>
                             </div>
-                            <label>
+                            <div>
+                                <label>
                                 {{t "grid"}}
-                            </label>
-                            <span id="mouse-grid">
+                                </label>
+                                <span id="mouse-grid">
 
-                            </span>
+                                </span>
+                            </div>
+                            <div>
+                                <label>
+                                    {{t "grid status"}}
+                                </label>
+                                <span id="grid-status">
+                                    
+                                </span>
+                            </div>
                         </div>
                                              
                     </div>
