--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -238,9 +238,9 @@
                         
                     </div>
                 </div>
-
-                <div class="panel-body">
-                    <div id="oper-grid" class="form-group">
+    
+                <div id="oper-grid" class="panel-body">
+                    <div  class="form-group">
                         <div class="input-group">
                             <input id="grid-picture" type="url" placeholder='{{t "set grid picture"}}' class="form-control">
                             <span id="set-grid-picture" class="input-group-addon">{{t "SET"}}</span>
