--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -15,7 +15,10 @@
 <nav class="navbar navbar-galaxy" role="navigation">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#">EEGalaxy</a>
+            <a href="#">
+                <!-- #FFCC00 -->
+                <img src="/images/title40.png">
+            </a>
         </div>
         <div class="pull-right">
             <ul class="nav navbar-nav">
@@ -24,7 +27,7 @@
                         <b class="caret"></b>
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">{{t "contract"}}</a></li>
+                        <li><a id="contract" target="_blank" href="#">{{t "contract"}}</a></li>
                     </ul>
                 </li>
 
